# egui-crossplatform-tests

./: Cargo.toml  README.md  buildweb.sh  setupweb.sh  startweb.sh
public/: index.html  style.css
src/: app.rs  lib.rs  main.rs
